Prevent navbar wrap

--- a/src/components/Edit/EditPanelTabs.css
+++ b/src/components/Edit/EditPanelTabs.css
@@ -3,8 +3,21 @@
     padding-top:0.2em;
     margin-bottom: 0.25em !important;
     background-color: #262931;
+    width: 100%;
+    height: 45px;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+.nav-tabs::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+.nav-tabs:hover::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
 }
 .nav-link {
+    white-space: nowrap;
     border-radius: 0px !important;
     border-color: hsl(224, 13%, 30%) !important;
     -webkit-user-select: none; /* Safari */
